Then your architecture is on the right path. Plan Split optimization into two explicit lanes with one control plane:
1. **Control plane (shared)**
- Adapter lifecycle, quotas, canary/rollback, observability, benchmark harness.
- Already strong in Gollek. Keep this provider-agnostic.

2. **Execution planes (specialized)**
- **CPU lane**: GGUF-first tuning (thread pinning, NUMA policy, cache-aware batching, quantization defaults).
- **GPU lane**: LibTorch advanced path (hybrid FP8/BF16, rowwise calibration, future SageAttention2 kernels).

What to do next practically:
1. Add a **CPU benchmark matrix** parallel to GPU Zipf harness (latency, throughput, memory, power if possible).
2. Define **hardware profiles** (, , , ) with tuned defaults.
3. Add an **auto-policy selector**: choose safe profile by detected hardware, with manual override.
4. Keep all advanced paths behind flags + canary allow/deny + rollback (already in place).

If you want, I can implement the first version of a  in Gollek next (config + detection + mapped defaults).